# gideros

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  bookmarks.txt  changelog.txt  doctool.sln  donors.txt  gideros.sln  licenses.txt  version.txt
2dsg/: 2dsg.vcproj  Matrices.cpp  Matrices.h  MaxRectsBinPack.cpp  Rect.h  SConstruct  Vectors.h  application.cpp  application.h  bitmap.cpp  bitmap.h  bitmapdata.cpp  bitmapdata.h  blendfunc.cpp  blendfunc.h  clipper.cpp.unused  clipper.hpp.unused  color.cpp  color.h  colortransform.cpp  colortransform.h  completeevent.cpp  completeevent.h  dib.cpp  dib.h  embeddedfont.inc  enterframeevent.cpp  enterframeevent.h  errorevent.cpp  errorevent.h  font.cpp  font.cpp.disabled  font.h  font.h.disabled  fontbase.cpp  fontbase.h  ftlibrarysingleton.cpp  ftlibrarysingleton.h  gbitmapbatch.cpp  gbitmapbatch.h  (+120 more)
Release/: GiderosDist.plist  gideros_mui2.nsi
accountmanager/: accountmanager.pro  dialog.cpp  dialog.h  dialog.ui
android/: addr2line.bat  gettombstone.bat  release.keystore  shell.bat
animationeditor/: animationeditor.pro  animationeditor.sln  animationeditor.vcproj  canvaswidget.cpp  canvaswidget.h  controller.cpp  controller.h  document.cpp  document.h  librarytreewidget.cpp  librarytreewidget.h  librarywidget.h  librarywidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  timelinewidget.cpp  timelinewidget.h
desktop/: desktop.pro
doc.obsolete/: accelerometer.html  accelerometer.txt  analytics.html  analytics.txt  application.txt  audio.html  audio.txt  class diagram.vsd  (+57 more)
emscripten/webxr/: CMakeLists.txt  COPYING  README.md  library_webxr.js  webxr.h
(+5702 files in other folders)
